# agent-factory

./: .gitignore  INSTALLATION_COMPLETE.md  README.md  docker-compose.yml  install.sh  opencode-integrate.sh  package.json  pyproject.toml  run.sh  setup-mcp.sh  start.sh  test-mcp.sh
docs/: API_REFERENCE.md  CONTEXT_MANAGEMENT.md  MCP_README.md  NEW_FEATURES.md  OPENCODE_INTEGRATION.md  OPENCODE_USAGE_GUIDE.md  SETUP.md  WORK_AGENT_STATISTICS.md
examples/: basic_usage.py  documentation_example.py  example_context_standalone.py  example_context_usage.py  plan_approval_example.py  plan_approval_example2.py  raci_example.py  toc_analysis_example.py  toc_optimization_example.py  work_agent_statistics_example.py  workflow_templates_example.py
npm-package/: PUBLISHING.md  README.md  SETUP_README.md  index.js  package.json  test.sh
scripts/: generate_toc_report.py
skills/: workflow.md
src/agent_factory/: __init__.py  mcp_server.py  test_system.py
src/agent_factory/coordinator/: AGENT.md  __init__.py  agent.py  mcp_config.json
src/agent_factory/core/: __init__.py  agent_pool.py  context.py  context_manager.py  documentation.py  optimization_algorithms.py  orchestrator.py  raci.py  skill_analyzer.py  skill_manager.py  toc_supervisor.py  token_optimizer.py  work.py
src/agent_factory/data_collection/: AGENT.md  __init__.py  agent.py  mcp_config.json  (+1 more)
tests/: __init__.py  test_context.py  test_context_manager.py  test_multi_queue.py  test_retry.py  test_scaling.py  test_scheduler.py  test_skill_analyzer.py  test_skill_manager.py  test_toc_realtime.py  test_worker.py
(+52 files in other folders)
